--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1964,7 +1964,7 @@ flex-wrap: wrap;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 40px;
+    gap: 30px;
 .offices__info-wrap{
   max-width: 350px;
 }
@@ -2027,6 +2027,17 @@ flex-wrap: wrap;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @media screen and (max-width: 1100px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  @media screen and (max-width: 600px) {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 40px;
+  }
   .feedback-star-lines{
     margin-bottom: 0;
   }
@@ -2037,6 +2048,9 @@ flex-wrap: wrap;
   }
   .feedback-star-line__inner{
     width: 133px;
+    @media screen and (max-width: 600px) {
+      width: 100px;
+    }
   }
   .feedback-star-line{
 
@@ -2052,6 +2066,19 @@ flex-wrap: wrap;
     font-weight: 400;
     line-height: 36px; max-width: 231px;
     width: 100%;
+    @media screen and (max-width: 600px) {
+    max-width: 100%;
+    }
+  }
+  .btn{
+    @media screen and (max-width: 1100px) {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      margin-left: auto;
+    }
+    @media screen and (max-width: 600px) {
+      margin-left: 0;
+    }
   }
   &__range{
     &-title{
@@ -2095,6 +2122,7 @@ flex-wrap: wrap;
 
 .review-menu{
   display: flex;
+  flex-wrap: wrap;
   &__link{
     margin-right: 12px;
     padding: 6px 16px;
@@ -2105,6 +2133,7 @@ flex-wrap: wrap;
     border-radius: 7px;
     color: #828282;
     border: 1px solid #828282;
+    margin-bottom: 10px;
     transition: var(--transition);
     &:hover,
     &.active{
@@ -2123,14 +2152,28 @@ flex-wrap: wrap;
   margin-bottom: 12px;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  @media screen and (max-width: 500px){
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+  }
   &-inner{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 10px 0;
     margin-right: 20px;
     color: #343434;
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
+    @media screen and (max-width: 500px) {
+      width: 100%;
+    flex-direction: column;
+      margin: 0;
+    }
   }
   &-item{
     display: flex;
@@ -2143,6 +2186,24 @@ flex-wrap: wrap;
     font-weight: 400;
     line-height: 16px;
     margin-left: 12px;
+    @media screen and (max-width: 500px) {
+      justify-content: center;
+      width: 100%;
+    }
+    &.active{
+      border-color: #fc7a3a;
+      color: #fc7a3a;
+    }
+    &.active-asc {
+      .arrows .arrow:nth-child(1) svg path {
+        stroke: #fc7a3a;
+      }
+    }
+    &.active-desc{
+      .arrows .arrow:nth-last-child(1) svg path{
+        stroke: #fc7a3a;
+      }
+    }
     .arrows{
       margin-left: 8px;
       display: flex;
@@ -2153,4 +2214,8 @@ flex-wrap: wrap;
       display: block;
     }
   }
+}
+
+.d-none{
+  display: none;
 }
