--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "breadcrumb";
 @import "pagination";
 @import "filter";
+@import "blocks/wishlist";
 //@import "default/shortcode";
 //@import "default/spacing";
 //@import "default/edu-common";
