--- a/src/scss/blocks/wishlist.scss
+++ b/src/scss/blocks/wishlist.scss
@@ -78,6 +78,23 @@
     color: #343434;
     margin-right: 10px;
   }
+  .catalogue__price-old {
+    font-size: 15px;
+    line-height: 12px;
+    font-style: italic;
+    color: #868686;
+    display: inline-block;
+    position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+    background: #c98d9f;
+  }
+  }
 
   .catalogue__table-btn .catalogue__table-action-link {
     display: none;
@@ -102,14 +119,26 @@
   }
 
   .catalogue__btn-cart {
-    padding: 11px 18px;
+    padding: 11px 14px;
     font-size: 14px;
     line-height: 11px;
     font-weight: 700;
     background: transparent;
     border: 1px solid #fc6519;
     color: #fc6519;
-    max-width: 67px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    &:hover{
+      .catalogue__btn-cart-plus{
+        color: #fff;
+      }
+    }
+    .catalogue__btn-cart-plus{
+      color: #fc6519;
+    }
+    width: 67px;
     max-height: 38px;
   }
 
@@ -358,10 +387,11 @@
     }
     &__menu{
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       padding-right: 24px;
       position: relative;
-      margin-bottom: 30px;
+      margin-bottom: 14px;
       @media screen and (max-width: 600px) {
         padding: 0;
       }
@@ -384,6 +414,7 @@
         background: #FFF;
         box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.10);
         margin-right: 16px;
+        margin-bottom: 16px;
 
         color: #000;
         font-size: 14px;
@@ -403,7 +434,7 @@
     &__sort{
       padding: 0 24px;
       position: relative;
-      max-width: 300px;
+      max-width: 330px;
       width: 100%;
       margin-bottom: 30px;
 
@@ -478,6 +509,41 @@
         @media screen and (max-width: 600px) {
           padding: 0;
         }
+      }
+    }
+  }
+  .jq-selectbox .jq-selectbox__dropdown{
+    margin-top: 10px;
+    ul li{
+      padding: 16px;
+    }
+  }
+  .jq-selectbox li{
+    position: relative;
+    padding: 16px;
+    &::before{
+      content: '';
+      position: absolute;
+      width: 95%;
+      height: 1px;
+      background: rgba(0, 0, 0, 0.10);
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+    }
+    &.sel {
+      background: #fff;
+      font-weight: 700;
+      color: #fc6519;
+      &::after{
+        content: '';
+        position: absolute;
+        transform: translateY(-50%);
+        top: 50%;
+        right: 20px;
+        width: 16px;
+        height: 16px;
+        background-image: url(/img/icon/icon-check.svg);
       }
     }
   }
