--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "breadcrumb";
 @import "pagination";
 @import "filter";
+@import "allPages";
 @import "blocks/wishlist";
 //@import "default/shortcode";
 //@import "default/spacing";
@@ -44,7 +45,7 @@ input[type=number] {
 
 body {
   font-family: "Montserrat", Verdana, Arial, Helvetica, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 23px;
   min-height: 100vh;
